# renderenginev2

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: application.cpp.BDCBE59BABF2843B.idx  application.h.D3A106DB122D5FCA.idx  assetLoader.cpp.1B07B191E959F13B.idx  assetLoader.h.5FE5AE6E5B0A9A66.idx  dataTypes.h.46B302438BA05B34.idx  imconfig.h.74DBD4106AA9902A.idx  imgui.cpp.7DD7EAB418542521.idx  imgui.h.42065F71147BBA13.idx  imgui_demo.cpp.526DBD01018B3DE1.idx  imgui_draw.cpp.8C2619200E73DC7D.idx  imgui_impl_sdl2.cpp.C71CB6B1D5D2C927.idx  imgui_impl_sdl2.h.8C063ED6E654BF8C.idx  imgui_impl_sdlrenderer2.cpp.2A9454EE6553F9D5.idx  imgui_impl_sdlrenderer2.h.A10A715AC1DFBCA4.idx  imgui_internal.h.462E2FB8D7267A15.idx  imgui_tables.cpp.36CF46E13EAA0D41.idx  imgui_widgets.cpp.7C57E970290DB759.idx  imstb_rectpack.h.E9C30D947ABC8B5E.idx  imstb_textedit.h.0B732363F05121FA.idx  imstb_truetype.h.09FEEBEC28D1FB6A.idx  json.hpp.CB85F3D3D7EB150D.idx  main.cpp.7732B62D40423322.idx  meshGenerating.cpp.5A6FAC64248BFFD7.idx  meshGenerating.h.E556988FD65A2AD3.idx  meshProcessing.cpp.3768159DFDC04B6C.idx  meshProcessing.h.95B92196DCFEB1D8.idx  raytracer.cpp.8F5D6A5C89F51EC3.idx  raytracer.h.BAA07D47E38D36F4.idx  (+6 more)
header_files/: application.h  assetLoader.h  dataTypes.h  meshGenerating.h  meshProcessing.h  raytracer.h  renderer.h  vectorMath.h
models/toy_chica__five_nights_at_freddys_2/: license.txt  scene.gltf
patches/: preStudioRaytracerSrc.patch
src_files/: application.cpp  assetLoader.cpp  meshGenerating.cpp  meshProcessing.cpp  raytracer.cpp  renderer.cpp
